plugins {
    id 'com.android.library'
    id 'maven-publish'
}

android {
    namespace 'com.v7878.foreign'
    compileSdk 34

    defaultConfig {
        minSdk 26

        consumerProguardFiles "consumer-rules.pro"
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }

    publishing {
        singleVariant('release') {
            withSourcesJar()
        }
    }
}

dependencies {
    compileOnly 'com.github.vova7878:KeepAnnotation:v0.0.1'
    compileOnly 'com.github.vova7878:OptimizationAnnotations:v0.0.2'
    compileOnly 'com.github.vova7878:SunCleanerStub:v0.0.1'

    compileOnly project(':fake_llvm')

    api project(':VarHandleApi')

    implementation project(':AndroidUnsafe')

    implementation 'com.github.vova7878:AndroidMisc:v0.0.2'
    implementation 'com.github.vova7878:DexFile:v0.0.4'
}

publishing {
    publications {
        release(MavenPublication) {
            groupId project.group
            artifactId project.name
            version project.version
            afterEvaluate {
                from components.release
            }
        }
    }
}